5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1668_1395.log
== TEST (2019-04-15 18:21:34) 
-- CODE:
vendas = float(input("digite vendas"))
comissao = (1000*0.05)+(1000*0.1)
print(round(comissao, 2))

-- OUTPUT:
150.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:21:53) 
-- CODE:
vendas = float(input("digite vendas"))
comissao = (1000*0.05)+(1000*0.1)
print(round(comissao, 2))

-- EXECUTION TIME:
0.204659
-- TEST CASE 1:
---- input:
995.58
---- correct output:
49.78
---- user output:
150.0
-- TEST CASE 2:
---- input:
4500.86
---- correct output:
400.09
---- user output:
150.0
-- TEST CASE 3:
---- input:
100
---- correct output:
5.0
---- user output:
150.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:59) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem(vendas*0.5)
				
else(vendas>=1000):
	mensagem(vendas*0.1)
				 
print(round(mensagem, 2))

-- ERROR:
File "XXXX", line 8
    else(vendas>=1000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:37:25) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem(vendas*0.5)
				
else(vendas):
	mensagem(vendas*0.1)
				 
print(round(mensagem, 2))

-- ERROR:
File "XXXX", line 8
    else(vendas):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:37:55) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem(vendas*0.5)
				
else:
	mensagem(vendas*0.1)
				 
print(round(mensagem, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem(vendas*0.5)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:38:22) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem(vendas*0.5)
				
else:
	mensagem(vendas)
				 
print(round(mensagem, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem(vendas*0.5)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:39:36) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.5)
				
else:
	mensagem = (vendas)
				 
print(round(mensagem, 2))

-- OUTPUT:
497.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:39:55) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.5)
				
else:
	mensagem = (vendas*0.1)
				 
print(round(mensagem, 2))

-- OUTPUT:
497.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:41:02) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.05)
				
else:
	mensagem = (vendas*0.1)
				 
print(round(mensagem, 2))

-- OUTPUT:
49.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:27) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.05)
				
else:
	mensagem = (vendas*0.05+0.1)
				 
print(round(mensagem, 2))

-- OUTPUT:
49.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:46:42) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.05)
				
else:
	mensagem = (vendas*0.05+(vendas-1000)*0.1)
				 
print(round(mensagem, 2))

-- OUTPUT:
49.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:47:09) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.05)
				
else:
	mensagem = (vendas*0.05+((vendas-1000)*0.1))
				 
print(round(mensagem, 2))

-- OUTPUT:
49.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:48:28) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.05)
				
else:
	mensagem = (vendas-1000)*0.1
				 
print(round(mensagem, 2))

-- OUTPUT:
49.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:49:30) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.05)
				
else:
	mensagem = vendas*0.05+(vendas-1000)*0.1
				 
print(round(mensagem, 2))

-- OUTPUT:
49.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:49:59) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.05)
				
else:
	mensagem = vendas*0.05-(vendas-1000)*0.1
				 
print(round(mensagem, 2))

-- OUTPUT:
49.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:50:38) 
-- CODE:
vendas = float(input("digite vendas"))
#comissao1 = (1000*0.05)
#comissao2 = (1000*0.1)

if(vendas<=1000):
   mensagem = (vendas*0.05)
				
else:
	mensagem = (vendas*0.05)+(vendas-1000)*0.1
				 
print(round(mensagem, 2))

-- OUTPUT:
49.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
